<resources>
    <string name="app_name">InputControls</string>
    <string name="edit_surname">Surname</string>
    <string name="edit_name">Name</string>
    <string name="title">Input Controls</string>
    <string name="ask_question">Chose one color:</string>
    <string name="edit_password">Password</string>
    <string name="color1">red</string>
    <string name="color2">blue</string>
    <string name="color3">yellow</string>
    <string name="button_text">SEND DATA</string>
    <string name="hint_country">Country</string>
    <string name="generic_error">You have to complete all fields. </string>




    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
</resources>
