<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.personalportablehealthtechnology.inputcontrols.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@android:color/black"
        android:textSize="40dp"
        android:text="@string/title"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="text"
        android:hint="@string/edit_name" />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="text"
        android:hint="@string/edit_surname" />

    <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/autocomplete_country"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/hint_country"
        android:singleLine="true"
        android:completionThreshold="1"
        android:imeOptions="actionNext"

        />

    <EditText android:id="@+id/edit_password"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPassword"
        android:hint="@string/edit_password" />

    <TextView
        android:id="@+id/ask_question"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:text="@string/ask_question"
        android:gravity="center"
        />

    <CheckBox android:id="@+id/checkbox_color1"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/color1"/>

    <CheckBox android:id="@+id/checkbox_color2"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/color2"/>

    <CheckBox android:id="@+id/checkbox_color3"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/color3" />

    <Button
        android:id="@+id/end"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/button_text"
        android:background="@android:color/darker_gray"
        android:textSize="22sp" />

</LinearLayout>
